# rsomics-vcf-mpileup

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  vcf_mpileup.rs
src/: bases.rs  cli.rs  errmod.rs  gl.rs  lib.rs  main.rs  vcf.rs
tests/: compat.rs  make_fixtures.py
tests/golden/: small.bam  small.bam.bai  small.fa  small.fa.fai
