[package]
name = "rsomics-vcf-mpileup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/omics-rust/rsomics-vcf-mpileup"
authors.workspace = true
description = "VCF-emitting pileup (genotype likelihoods) from BAM — Rust port of bcftools mpileup single-sample SNP mode"
readme = "README.md"
categories = ["science"]
keywords = ["bam", "vcf", "mpileup", "genotype-likelihoods", "bioinformatics"]

[[bench]]
name = "vcf_mpileup"
harness = false

[lib]
name = "rsomics_vcf_mpileup"
path = "src/lib.rs"

doctest = false
[[bin]]
name = "rsomics-vcf-mpileup"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
rsomics-pileup = { version = "0.1" }
clap.workspace = true
noodles = { version = "0.110", features = ["fasta", "sam", "bam", "bgzf"] }

[dev-dependencies]
criterion.workspace = true
