[package]
name = "rsomics-vcf-mpileup"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-mpileup"
authors = ["Zane Leong <efd@live.com>"]
description = "VCF-emitting pileup (genotype likelihoods) from BAM — Rust port of bcftools mpileup single-sample SNP mode"
readme = "README.md"
categories = ["science"]
keywords = ["bam", "vcf", "mpileup", "genotype-likelihoods", "bioinformatics"]

[[bench]]
name = "vcf_mpileup"
harness = false

[lib]
name = "rsomics_vcf_mpileup"
path = "src/lib.rs"

doctest = false
[[bin]]
name = "rsomics-vcf-mpileup"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
rsomics-pileup = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["fasta", "sam", "bam", "bgzf"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
